k8s/manifest.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flinkfast-web-backend
spec:
  selector:
    matchLabels:
      app: flinkfast-web-backend
  template:
    metadata:
      labels:
        app: flinkfast-web-backend
    spec:
      serviceAccountName: flinkfast-web-backend
      containers:
        - name: flinkfast-web-backend
          image: 189266647936.dkr.ecr.us-east-1.amazonaws.com/flinkfast-web-backend:latest
          ports:
            - containerPort: 8080
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: flinkfast-web-backend
spec:
  selector:
    app: flinkfast-web-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
# Ingress with AWS ALB annotations
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flinkfast-web-backend-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:189266647936:certificate/e68fe1df-7c42-4669-a44b-23fc731793a1"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flinkfast-web-backend
                port:
                  number: 8080
